fix logo problem
- logo getting distorted on sandford/winscombe

--- a/src/scss/components/_header1.scss
+++ b/src/scss/components/_header1.scss
@@ -57,14 +57,14 @@
 
 .logo-img{
    // content: url(Assets/logos/weare-logo-no-background.png);
-    max-width: 25rem;
+    max-width: 100%;
     max-height: 13rem;
     transition: all 0.3s;
     transition-timing-function: ease-in-out;
     padding-bottom: 0.1rem;
     padding-top: 0.2rem;
     margin-top: 3rem;
-    width: 100%;
+  
     
 }
 
